--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,8 @@
-.Game{
-display:  flex;
-justify-content: center;
-align-items: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* font-family: 'Encode Sans Expanded', sans-serif; */
+  font-family: "Press Start 2P", cursive;
+  /* font-family: "Quicksand", sans-serif; */
 }
