add chat functionality and styles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,15 @@
   /* font-family: "Quicksand", sans-serif; */
 }
 
+body{
+   background: linear-gradient(
+    108deg,
+    rgba(1, 147, 86, 1) 0%,
+    rgba(10, 201, 122, 1) 100%
+  );
+
+}
+
 .button-wrapper{
   margin: 32px;
   display: flex;
